# fawkes-body-doubling-phoenix

./: .gitignore  Cargo.toml  README.md
docs/: Journal01.md
docs/archive/: PRDv001.md
docs/prd01/: journal.md  journey01.md  journey02.md  min01.md  spec01.md  spec02.md
src/: cli.rs  lib.rs  main.rs
src/adapters/: mod.rs  openai.rs  screen.rs  store.rs  time.rs
src/application/: config.rs  mod.rs  service.rs  session.rs  traits.rs
src/core/: error.rs  mod.rs  prompt.rs  summary.rs  types.rs
src/gpui_app/: input.rs  mod.rs  model.rs
tests/: probe_flow.rs
